[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/textures/etc/Black.png" type="Texture" id=1]
[ext_resource path="res://assets/themes/buttons_theme.theme" type="Theme" id=2]
[ext_resource path="res://assets/fonts/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/Menus/settings/Settings.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 3 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 1 )
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[node name="Settings" type="Control"]
pause_mode = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.439216 )
margin_right = 482.0
margin_bottom = 272.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
pause_mode = 2
margin_left = 199.0
margin_top = 195.123
margin_right = 288.0
margin_bottom = 217.123
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
pause_mode = 2
margin_left = 198.555
margin_top = 51.9638
margin_right = 287.555
margin_bottom = 190.964
theme = SubResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="Button" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 89.0
margin_bottom = 41.0
text = "General"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 89.0
margin_bottom = 67.0
text = "Controls"
flat = true

[node name="Audio" type="Button" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 89.0
margin_bottom = 93.0
text = "Audio"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="Button" parent="VBoxContainer"]
margin_top = 97.0
margin_right = 89.0
margin_bottom = 119.0
text = "Graphics"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Back" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="VBoxContainer/Graphics" to="." method="_on_Graphics_pressed"]
